--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -6,5 +6,5 @@ $hoverColour: darken($linkColour, 10%);
 $captionColour: lighten($headingColour, 40%);
 $white: #fff;
 
-$backgroundColour: #ffefc8;
+$backgroundColour: #eca4a4c3;
 $codeBackgroundColour: darken($backgroundColour, 5%);
